@@ -1,10 +1,23 @@
 package no.nav.dolly.bestilling.arenaforvalter;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import lombok.AllArgsConstructor;
+import lombok.NoArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import no.nav.dolly.bestilling.ConsumerStatus;
-import no.nav.dolly.bestilling.arenaforvalter.command.*;
-import no.nav.dolly.bestilling.arenaforvalter.dto.*;
+import no.nav.dolly.bestilling.arenaforvalter.command.ArenaForvalterDeleteCommand;
+import no.nav.dolly.bestilling.arenaforvalter.command.ArenaForvalterGetMiljoeCommand;
+import no.nav.dolly.bestilling.arenaforvalter.command.ArenaGetCommand;
+import no.nav.dolly.bestilling.arenaforvalter.command.ArenaforvalterPostAap;
+import no.nav.dolly.bestilling.arenaforvalter.command.ArenaforvalterPostAap115;
+import no.nav.dolly.bestilling.arenaforvalter.command.ArenaforvalterPostArenaBruker;
+import no.nav.dolly.bestilling.arenaforvalter.command.ArenaforvalterPostArenadagpenger;
+import no.nav.dolly.bestilling.arenaforvalter.dto.Aap115Request;
+import no.nav.dolly.bestilling.arenaforvalter.dto.Aap115Response;
+import no.nav.dolly.bestilling.arenaforvalter.dto.AapRequest;
+import no.nav.dolly.bestilling.arenaforvalter.dto.AapResponse;
+import no.nav.dolly.bestilling.arenaforvalter.dto.ArenaResponse;
+import no.nav.dolly.bestilling.arenaforvalter.dto.ArenaStatusResponse;
 import no.nav.dolly.config.Consumers;
 import no.nav.dolly.domain.resultset.arenaforvalter.ArenaDagpenger;
 import no.nav.dolly.domain.resultset.arenaforvalter.ArenaNyeBrukere;
@@ -30,16 +43,16 @@ public class ArenaForvalterConsumer extends ConsumerStatus {
 
     private final WebClient webClient;
     private final ServerProperties serverProperties;
-    private final TokenExchange tokenService;
+    private final TokenExchange tokenExchange;
 
     public ArenaForvalterConsumer(
             Consumers consumers,
-            TokenExchange tokenService,
+            TokenExchange tokenExchange,
             ObjectMapper objectMapper,
-            WebClient webClient
-    ) {
+            WebClient webClient) {
+
         serverProperties = consumers.getTestnavArenaForvalterenProxy();
-        this.tokenService = tokenService;
+        this.tokenExchange = tokenExchange;
         this.webClient = webClient
                 .mutate()
                 .baseUrl(serverProperties.getUrl())
@@ -50,7 +63,7 @@ public class ArenaForvalterConsumer extends ConsumerStatus {
     @Timed(name = "providers", tags = {"operation", "arena_deleteIdent"})
     public Flux<ArenaResponse> deleteIdenter(List<String> identer) {
 
-        return tokenService.exchange(serverProperties)
+        return tokenExchange.exchange(serverProperties)
                 .flatMapMany(token -> new ArenaForvalterGetMiljoeCommand(webClient, token.getTokenValue()).call()
                         .flatMap(miljoe -> Flux.fromIterable(identer)
                                 .delayElements(Duration.ofMillis(100))
@@ -61,7 +74,7 @@ public class ArenaForvalterConsumer extends ConsumerStatus {
     @Timed(name = "providers", tags = {"operation", "arena_deleteIdent"})
     public Mono<ArenaResponse> inaktiverBruker(String ident, LocalDate stansdato, String miljoe) {
 
-        return tokenService.exchange(serverProperties)
+        return tokenExchange.exchange(serverProperties)
                 .flatMap(token -> new ArenaForvalterDeleteCommand(webClient, ident, stansdato, miljoe, token.getTokenValue()).call()
                         .doOnNext(response -> log.info("Inaktivert bruker {} mot Arenaforvalter {}", ident, response)));
     }
@@ -70,17 +83,17 @@ public class ArenaForvalterConsumer extends ConsumerStatus {
     public Flux<ArenaNyeBrukereResponse> postArenaBruker(ArenaNyeBrukere arenaNyeBrukere) {
 
         log.info("Arena opprett bruker {}", arenaNyeBrukere);
-        return tokenService.exchange(serverProperties)
+        return tokenExchange.exchange(serverProperties)
                 .flatMapMany(token -> new ArenaforvalterPostArenaBruker(webClient, arenaNyeBrukere, token.getTokenValue()).call()
                         .doOnNext(response -> log.info("Opprettet bruker {} mot Arenaforvalter {}",
-                                arenaNyeBrukere.getNyeBrukere().get(0).getPersonident(), response)));
+                                arenaNyeBrukere.getNyeBrukere().getFirst().getPersonident(), response)));
     }
 
     @Timed(name = "providers", tags = {"operation", "arena_postAap"})
     public Flux<AapResponse> postAap(AapRequest aapRequest) {
 
         log.info("Arena opprett Aap {}", aapRequest);
-        return tokenService.exchange(serverProperties)
+        return tokenExchange.exchange(serverProperties)
                 .flatMapMany(token -> new ArenaforvalterPostAap(webClient, aapRequest, token.getTokenValue()).call()
                         .doOnNext(response -> log.info("Opprettet aap {} mot Arenaforvalter {}",
                                 aapRequest.getPersonident(), response)));
@@ -90,7 +103,7 @@ public class ArenaForvalterConsumer extends ConsumerStatus {
     public Flux<Aap115Response> postAap115(Aap115Request aap115Request) {
 
         log.info("Arena opprett Aap115 {}", aap115Request);
-        return tokenService.exchange(serverProperties)
+        return tokenExchange.exchange(serverProperties)
                 .flatMapMany(token -> new ArenaforvalterPostAap115(webClient, aap115Request, token.getTokenValue()).call()
                         .doOnNext(response -> log.info("Opprettet aap115 {} mot Arenaforvalter {}",
                                 aap115Request.getPersonident(), response)));
@@ -100,7 +113,7 @@ public class ArenaForvalterConsumer extends ConsumerStatus {
     public Flux<ArenaNyeDagpengerResponse> postArenaDagpenger(ArenaDagpenger arenaDagpenger) {
 
         log.info("Opprett dagpenger mot Arenaforvalter {}", arenaDagpenger);
-        return tokenService.exchange(serverProperties)
+        return tokenExchange.exchange(serverProperties)
                 .flatMapMany(token -> new ArenaforvalterPostArenadagpenger(webClient, arenaDagpenger, token.getTokenValue()).call()
                         .doOnNext(response -> log.info("Opprettet dagpenger for {} mot Arenaforvalter {}",
                                 arenaDagpenger.getPersonident(), response)));
@@ -109,14 +122,14 @@ public class ArenaForvalterConsumer extends ConsumerStatus {
     @Timed(name = "providers", tags = {"operation", "arena_getEnvironments"})
     public Flux<String> getEnvironments() {
 
-        return tokenService.exchange(serverProperties)
+        return tokenExchange.exchange(serverProperties)
                 .flatMapMany(token -> new ArenaForvalterGetMiljoeCommand(webClient, token.getTokenValue()).call());
     }
 
     @Timed(name = "providers", tags = {"operation", "arena_getEnvironments"})
     public Mono<ArenaStatusResponse> getArenaBruker(String ident, String miljoe) {
 
-        return tokenService.exchange(serverProperties)
+        return tokenExchange.exchange(serverProperties)
                 .flatMap(token -> new ArenaGetCommand(webClient, ident, miljoe, token.getTokenValue()).call())
                 .doOnNext(response -> log.info("Hentet bruker {} fra Arena miljoe {} {}", ident, miljoe, response));
     }
